项目名称路径调整

--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "myapp"
+rootProject.name = "app"
 include ':app'
 include ':bar'
 include ':rdm'
