--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 //    buildToolsVersion "32.1.0-rc1" // 具体编译版本号 在sdk的安装目录下 build-tools内查看版本
 
     defaultConfig {
-        applicationId "com.tequeno.myapp" // 模块的应用编号即包名 需要和AndroidManifest.xml中的package属性一致
+        applicationId "com.tequeno.app" // 模块的应用编号即包名 需要和AndroidManifest.xml中的package属性一致
         minSdk 26 // 运行支持的最低版本号
         targetSdk 31 // 目标运行版本号
         versionCode 1 // 版本号
