--- a/rdm/src/main/AndroidManifest.xml
+++ b/rdm/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.jiuguan.rdm">
+    package="com.tequeno.rdm">
 
     <application
         android:allowBackup="true"
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Myapp">
+        android:theme="@style/Theme.app">
         <activity
             android:name=".SharedPrefsActivity"
             android:exported="false" />
