操作文件数据库

--- a/bar/src/main/AndroidManifest.xml
+++ b/bar/src/main/AndroidManifest.xml
@@ -2,6 +2,18 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tequeno.bar">
 
+    <!--
+        出于安全考虑 Android 11之后的版本要求访问其他软件包需要先声明
+        package直接指定软件包名
+        provider访问指定暴露的provider
+        intent访问指定暴露的intent activity
+     -->
+    <queries>
+        <package android:name="com.tequeno.rdm"/>
+        <provider android:authorities="com.tequeno.rdm.UserContentProvider"
+            android:exported="false" />
+    </queries>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
