--- a/bar/src/main/AndroidManifest.xml
+++ b/bar/src/main/AndroidManifest.xml
@@ -46,6 +46,10 @@
             </intent-filter>
 
         </activity>
+
+        <activity android:name=".Intent1Activity" android:exported="false"/>
+        <activity android:name=".listview.ListViewActivity" android:exported="false"/>
+        <activity android:name=".viewpager.ViewPagerActivity" android:exported="false"/>
     </application>
 
 </manifest>
