--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,11 @@ android {
         versionName "1.0" // 版本名字
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        // 引用高德地图.so
+        ndk {
+            abiFilters "armeabi-v7a"
+        }
     }
 
     buildTypes {
@@ -39,4 +44,13 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // 高德地图sdk
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    //3D地图so及jar
+    implementation 'com.amap.api:3dmap:5.0.0'
+    //定位功能
+    implementation 'com.amap.api:location:5.0.0'
+    //搜索功能
+    implementation 'com.amap.api:search:5.0.0'
 }
