--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,36 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tequeno.app">
 
+    <!--允许访问网络，必选权限-->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <!--允许获取粗略位置，若用GPS实现定位小蓝点功能则必选-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <!--允许获取设备和运营商信息，用于问题排查和网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
+    <!--允许获取网络状态，用于网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
+    <!--允许获取wifi网络信息，用于网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <!--允许获取wifi状态改变，用于网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+
+    <!--允许读设备等信息，用于问题排查-->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <!--允许写入扩展存储，用于数据缓存，若无此权限则写到私有目录-->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!--允许写设备缓存，用于问题排查-->
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
+    <!--允许访问网络，必选权限-->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +39,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.app">
+
+        <!-- 高德地图key -->
+        <meta-data
+            android:name="com.amap.api.v2.apikey"
+            android:value="14eb7d46a6e128cbd4c1ecc77a202724"/>
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -21,17 +57,19 @@
             <meta-data android:name="sdk.p1" android:value="ddk_001" />
             <meta-data android:name="sdk.p2" android:value="ddk_002" />
 
+            <!-- 快捷方式 -->
             <meta-data android:name="android.app.shortcuts" android:resource="@xml/shortcuts"/>
         </activity>
 
-        <activity android:name=".Link1Activity" />
-        <activity android:name=".Link2Activity" android:exported="true"/>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".LoginOkActivity" />
-        <activity android:name=".ScrollActivity" />
-        <activity android:name=".BtnActivity" android:exported="true"/>
-        <activity android:name=".FormActivity"  android:exported="true"/>
-        <activity android:name=".DateTimeActivity"  android:exported="true"/>
+        <activity android:name=".intent.Link1Activity" android:exported="false" />
+        <activity android:name=".intent.Link2Activity" android:exported="false"/>
+        <activity android:name=".login.LoginActivity" android:exported="false" />
+        <activity android:name=".login.LoginOkActivity" android:exported="false" />
+        <activity android:name=".form.ScrollActivity" android:exported="false" />
+        <activity android:name=".map.MapActivity" android:exported="false" />
+        <activity android:name=".form.BtnActivity" android:exported="true"/>
+        <activity android:name=".form.FormActivity"  android:exported="true"/>
+        <activity android:name=".form.DateTimeActivity"  android:exported="true"/>
     </application>
 
 </manifest>
