--- a/bar/src/main/AndroidManifest.xml
+++ b/bar/src/main/AndroidManifest.xml
@@ -18,10 +18,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-    <!-- 允许访问网络 -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- 允许检测网络状况 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 管理安装包权限 -->
     <!--<uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />-->
     <!-- 安装应用权限 -->
@@ -35,16 +31,9 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
 
-    <!--允许程序访问WiFi网络信息-->
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <!--允许程序读写手机状态和身份-->
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <!--允许程序访问CellID或WiFi热点来获取粗略的位置-->
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <application
         android:name=".MyApplication"
-        android:networkSecurityConfig="@xml/network_cfg"
+        android:networkSecurityConfig="@xml/cfg_network"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -138,9 +127,10 @@
             android:authorities="@string/bar_file_provider"
             android:grantUriPermissions="true">
 
+            <!-- fileProvider -->
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/filepaths" />
+                android:resource="@xml/cfg_file_path" />
         </provider>
     </application>
 
