--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,8 +39,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
-    implementation 'com.google.code.gson:gson:2.8.9'
-
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -53,4 +51,13 @@ dependencies {
     implementation 'com.amap.api:location:5.0.0'
     //搜索功能
     implementation 'com.amap.api:search:5.0.0'
+
+    // OkHttp
+    implementation "com.squareup.okhttp3:okhttp:4.9.3"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.3"
+
+    // netty
+//    implementation 'io.netty:netty-all:4.1.77.Final'
+    // gson
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
