--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,36 +4,30 @@
 
     <!--允许访问网络，必选权限-->
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <!--gps定位-->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
     <!--允许获取粗略位置，若用GPS实现定位小蓝点功能则必选-->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
+    <!--用于访问GPS定位-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <!--允许获取设备和运营商信息，用于问题排查和网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
     <!--允许获取网络状态，用于网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <!--允许获取wifi网络信息，用于网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-
     <!--允许获取wifi状态改变，用于网络定位，若无gps但仍需实现定位小蓝点功能则此权限必选-->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-
+    <!--用于申请调用A-GPS模块-->
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+    <!--如果设置了target >= 28 如果需要启动后台定位则必须声明这个权限-->
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <!--如果您的应用需要后台定位权限，且有可能运行在Android Q设备上,并且设置了target>28，必须增加这个权限声明-->
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION"/>
     <!--允许读设备等信息，用于问题排查-->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
     <!--允许写入扩展存储，用于数据缓存，若无此权限则写到私有目录-->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <!--允许写设备缓存，用于问题排查-->
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-
-    <!--允许访问网络，必选权限-->
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".MyApplication"
@@ -50,8 +44,11 @@
             android:name="com.amap.api.v2.apikey"
             android:value="14eb7d46a6e128cbd4c1ecc77a202724" />
 
-        <!-- 定位需要的官方service -->
-        <service android:name="com.amap.api.location.APSService" />
+        <!--
+            定位需要的官方service
+            如果您的app需要运行在Android Q版本的手机上，需要为ApsService增加android:foregroundServiceType="location"属性
+         -->
+        <service android:name="com.amap.api.location.APSService" android:foregroundServiceType="location"/>
         <!-- 自定义定位服务service 该策略已被放弃 改为使用守护线程持续读取坐标点数据 -->
         <service android:name=".map.MapLocationService" />
 
